--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     container_name: shell
     volumes:
       - $PWD/localusers:/localusers
+      - $PWD/s4-basic:/s4-basic
     stdin_open: true 
     tty: true
